# reshell

./: .dockerignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RESHELL_PLAN.md  codecov.yml
.github/workflows/: ci.yml  release.yml
benches/: classifier_bench.rs  compaction_bench.rs  exec_pipeline_bench.rs  recovery_bench.rs
docs/superpowers/plans/: 2026-06-07-reshell-v0.1.0-release.md  2026-06-14-reshell-improvements-plan.md
docs/superpowers/specs/: 2026-06-14-reshell-improvements-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: classifier_fuzz.rs  scrubber_fuzz.rs  validator_fuzz.rs
homebrew/: reshell.rb  rsh.rb
src/: budget.rs  cli.rs  completions.rs  config.rs  lib.rs  main.rs  utils.rs
src/classify/: config.rs  mod.rs  normalize.rs  patterns.rs  taxonomy.rs
src/compact/: diff.rs  jq.rs  json.rs  jsonpath.rs  languages.rs  mod.rs  skeleton.rs  view.rs
src/env/: detector.rs  mod.rs  platform.rs
src/exec/: analyze.rs  audit.rs  mod.rs  runner.rs  validator.rs
src/mcp/: mod.rs  prompts.rs  router.rs  server.rs  sse.rs  tools.rs
src/memory/: metrics.rs  mod.rs  pattern.rs  store.rs
src/recover/: alternatives.rs  bashisms.rs  deps.rs  memory.rs  mod.rs  resolve.rs  strategies.rs  suggest.rs
src/sandbox/: allowlist.rs  docker.rs  landlock.rs  mod.rs  overlay.rs  paths.rs  scrubber.rs  seccomp.rs
tests/: cross_platform_tests.rs  integration_tests.rs  property_tests.rs  sse_tests.rs
tests/fixtures/: large_log.txt  shell_errors.txt
