[package]
name = "reshell"
version = "0.1.0"
edition = "2021"
description = "Resilient Shell Execution Middleware for AI Agents"
authors = ["Azri Adam <azriadam.cs@gmail.com>"]
license = "MIT"

[[bin]]
name = "rsh"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tempfile = "3"
dirs = "5"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
insta = { version = "1", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "compaction_bench"
harness = false
