[package]
name = "reshell"
version = "0.1.0"
edition = "2021"
description = "Resilient Shell Execution Middleware for AI Agents"
authors = ["Azri Adam <azriadam.cs@gmail.com>"]
license = "MIT"

[[bin]]
name = "rsh"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "fs", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
# To use system SQLite (smaller binary, requires libsqlite3-dev):
# 1. Comment out the line above
# 2. Uncomment the target-specific sections below:
#
# [target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
# rusqlite = { version = "0.30", features = ["chrono"] }
#
# [target.'cfg(any(windows, target_env = "musl"))'.dependencies]
# rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tempfile = "3"
dirs = "5"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
toml = "0.8"

# Linux-only seccomp sandbox
[target.'cfg(target_os = "linux")'.dependencies]
libseccomp = { version = "0.3", optional = true }

[features]
default = []
seccomp = ["libseccomp"]

[dev-dependencies]
tokio-test = "0.4"
insta = { version = "1", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "compaction_bench"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
