[package]
name = "reshell"
version = "0.1.0"
edition = "2021"
description = "Resilient Shell Execution Middleware for AI Agents"
authors = ["Azri Adam <azriadam.cs@gmail.com>"]
license = "MIT"
categories = ["command-line-utilities", "development-tools"]
keywords = ["shell", "mcp", "ai", "agent", "middleware", "resilience"]
repository = "https://github.com/azri-cs/reshell"
documentation = "https://github.com/azri-cs/reshell"
readme = "README.md"

[[bin]]
name = "rsh"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "fs", "time", "sync", "net"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
# To use system SQLite (smaller binary, requires libsqlite3-dev):
# 1. Comment out the line above
# 2. Uncomment the target-specific sections below:
#
# [target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
# rusqlite = { version = "0.30", features = ["chrono"] }
#
# [target.'cfg(any(windows, target_env = "musl"))'.dependencies]
# rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
clap_complete = "4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tempfile = "3"
dirs = "5"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
toml = "0.8"
infer = "0.15"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# Linux-only seccomp sandbox
[target.'cfg(target_os = "linux")'.dependencies]
libseccomp = { version = "0.3", optional = true }

[features]
default = []
seccomp = ["libseccomp"]

[dev-dependencies]
tokio-test = "0.4"
insta = { version = "1", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures = "0.3"
regex = "1"

[[bench]]
name = "compaction_bench"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
